--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -98,6 +98,28 @@
       "hum": "ஈரப்பதம்",
       "dengue": "டெங்கு",
       "clinics": "மருத்துவமனைகள்"
+    },
+    "warning": {
+      "flood": {
+        "danger": { "title": "திடீர் வெள்ளம் (அபாயம்)" },
+        "warning": { "title": "திடீர் வெள்ளம் (எச்சரிக்கை)" }
+      },
+      "haze": {
+        "danger": { "title": "புகைமூட்டம் (அபாயம்)" },
+        "warning": { "title": "புகைமூட்டம் (எச்சரிக்கை)" }
+      },
+      "dengue": {
+        "danger": { "title": "அருகில் டெங்கு கூட்டம்" },
+        "warning": { "title": "அருகில் டெங்கு எச்சரிக்கை" }
+      },
+      "wind": {
+        "danger": { "title": "அழிவு விளைவிக்கும் காற்று (அபாயம்)" },
+        "warning": { "title": "வலுவான காற்று (எச்சரிக்கை)" }
+      },
+      "heat": {
+        "danger": { "title": "வெப்பம் (அபாயம்)" },
+        "warning": { "title": "வெப்பம் (எச்சரிக்கை)" }
+      }
     }
   },
   "nav": {
@@ -302,7 +324,24 @@
       "east": "கிழக்கு",
       "west": "மேற்கு",
       "central": "மத்திய"
-    }
+    },
+    "mock_disaster_title": "மாதிரி பேரிடர்",
+    "mock_disclaimer": "எந்த மாதிரி இயக்கத்தில் இருந்தாலும், அனைத்து மாதிரிகளும் அணைக்கப்படும் வரை உண்மையான கண்டறிதல்கள் தற்காலிகமாக நிறுத்தப்படுகின்றன.",
+
+    "mock_flood_label": "மாதிரி வெள்ளம் (அபாயம்)",
+    "mock_flood_desc": "உங்கள் தற்போதைய/டெமோ இருப்பிடத்தின் அருகில் திடீர் வெள்ளம் (அபாயம்) நிலையை ஒத்திகை செய்கிறது.",
+
+    "mock_haze_label": "மாதிரி புகைமூட்டம் (எச்சரிக்கை)",
+    "mock_haze_desc": "ஓர் பகுதியில் புகைமூட்டம் (எச்சரிக்கை) நிலையை ஒத்திகை செய்கிறது.",
+
+    "mock_dengue_label": "மாதிரி டெங்கு (எச்சரிக்கை)",
+    "mock_dengue_desc": "அருகிலுள்ள (5 கிமீக்கு உட்பட்ட) டெங்கு கிளஸ்டரை ஒத்திகை செய்கிறது.",
+
+    "mock_wind_label": "மாதிரி காற்று (எச்சரிக்கை)",
+    "mock_wind_desc": "ஓர் பகுதியில் வலுவான காற்று (எச்சரிக்கை) நிலையை ஒத்திகை செய்கிறது.",
+
+    "mock_heat_label": "மாதிரி வெப்பம் (அபாயம்)",
+    "mock_heat_desc": "ஓர் பகுதியில் வெப்பம் (அபாயம்) நிலையை ஒத்திகை செய்கிறது."
   },
   "emergency_contacts": {
     "title": "அவசர தொடர்புகள்",
