--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -32,7 +32,8 @@
 
     "hazard": {
       "none": "அபாயம் எதுவும் கண்டறியப்படவில்லை",
-      "slogan": "எச்சரிக்கையுடன் இருங்கள்,\nபாதுகாப்பாக இருங்கள்"
+      "slogan": "எச்சரிக்கையுடன் இருங்கள்,\nபாதுகாப்பாக இருங்கள்",
+      "alert": "அபாய எச்சரிக்கை"
     },
 
     "contacts": {
@@ -54,7 +55,8 @@
 
     "early": {
       "title": "முன்னெச்சரிக்கை",
-      "subtitle": "பொதுவான அபாயங்களை கண்காணிக்கிறது"
+      "subtitle": "அதிகாரப்பூர்வ தரவூற்றுகளில் இருந்து வரும் நேரடி தகவல்களுடன் சிங்கப்பூரின் பொதுவான ஆபத்துகளைப் பற்றித் தொடர்ந்து அறிந்திருங்கள். இத்தகவல்கள் தற்போதைய பாதுகாப்பு நிலையைத் தெளிவாகக் காட்டும்; உங்களையும் குடும்பத்தினரையும் பாதுகாக்க வேண்டிய நடவடிக்கைகளை எடுக்க உதவும்.",
+      "subtitle2": "பொதுவான அபாயங்களை கண்காணிக்கிறது"
     },
 
     "see_more": "மேலும் பார்க்க",
@@ -119,6 +121,55 @@
       "heat": {
         "danger": { "title": "வெப்பம் (அபாயம்)" },
         "warning": { "title": "வெப்பம் (எச்சரிக்கை)" }
+      }
+    }
+  },
+  "early": {
+    "severity": {
+      "safe": "பாதுகாப்பு",
+      "med": "நடுத்தரம்",
+      "high": "அதிகம்"
+    },
+    "cards": {
+      "flood": {
+        "title": "திடீர் வெள்ளம்",
+        "desc": {
+          "safe": "குறிப்பிடத்தக்க மழை இல்லை. கால்வாய்/நீரோடை சாதாரண நிலை.",
+          "warning": "{{place}} பகுதியில் பலமான மழை. தாழ்வான சாலைகளில் நீர் தேக்கம் ஏற்படலாம்; அவற்றைத் தவிர்க்கவும்.",
+          "danger": "{{place}} சுற்றுவட்டாரத்தில் திடீர் வெள்ளம். வெள்ளநீரில் வாகனம் ஓட்ட வேண்டாம்; அடிநிலைக் குழாய்கள்/விண்டிலேட்டட் இடங்களைத் தவிர்க்கவும்."
+        }
+      },
+      "haze": {
+        "title": "மூடுபனி (PM2.5)",
+        "desc": {
+          "safe": "தீவு முழுவதும் காற்றுத் தரம் சாதாரண வரம்பில் உள்ளது.",
+          "warning": "{{region}} பகுதியில் PM2.5 உயர்வு. நீண்ட நேர வெளிச்செயல்பாடுகளை குறைக்கவும்; தேவைப்பட்டால் முகக்கவசம் அணியவும்.",
+          "danger": "{{region}} பகுதியில் PM2.5 சுகாதாரத்திற்கு பாதகம். வீட்டுக்குள் இருக்கவும்; ஜன்னல்கள் மூடவும்; காற்று சுத்திகரிப்பான் பயன்பாட்டில் வைக்கவும்; வெளியே சென்றால் N95 அணியவும்."
+        }
+      },
+      "dengue": {
+        "title": "டெங்கு குவியல்",
+        "desc": {
+          "safe": "உங்கள் இருப்பிடத்திலிருந்து 5 கிமீ உள்ளே செயலில் உள்ள குவியல் இல்லை.",
+          "warning": "{{place}} அருகே (~{{km}} கி.மீ). தேங்கிய நீரை அகற்றவும்; கொசு விரட்டி பயன்படுத்தவும்.",
+          "danger": "{{place}} அருகே உயர் அபாய குவியல் ({{cases}}+ வழக்குகள்). விடியற்காலை/மாலை நேரக் கடிகளைக் தவிர்க்கவும்; வீட்டை தினமும் பரிசோதிக்கவும்; காய்ச்சல் நீடித்தால் மருத்துவரை காணவும்."
+        }
+      },
+      "wind": {
+        "title": "பலமான காற்று",
+        "desc": {
+          "safe": "காற்றின் வேகம் லேசானது முதல் மிதமானது வரை.",
+          "warning": "{{region}} பகுதியில் பலமான காற்று. பறந்து செல்லும் பொருட்களை உறுதிசெய்க; இருசக்கர/உயரமான வாகனங்கள் எச்சரிக்கையுடன் செல்லவும்.",
+          "danger": "{{region}} பகுதியில் சேதப்படுத்தும் காற்று. வீட்டுக்குள் இருங்கள்; கடற்கரை மற்றும் திறந்த இடங்களைத் தவிர்க்கவும்."
+        }
+      },
+      "heat": {
+        "title": "வெப்ப எச்சரிக்கை",
+        "desc": {
+          "safe": "வெப்ப அபாயம் குறைவு. போதுமான தண்ணீர் குடிக்கவும்.",
+          "warning": "{{region}} பகுதியில் அதிக வெப்பம் (HI ≈ {{hi}}°C). கடுமையான உடற்பயிற்சியை குறைக்கவும்; அடிக்கடி தண்ணீர் குடிக்கவும்.",
+          "danger": "{{region}} பகுதியில் மிகுந்த வெப்பம் (HI ≈ {{hi}}°C). வெப்ப நோய்வாய்ப்புள்ளது—நிழல்/ஏர்-கண்டீஷன் இடங்களில் இருங்கள்; பாதிக்கப்பட்டவர்களை கவனிக்கவும்."
+        }
       }
     }
   },
