--- a/i18n/resources/zh/common.json
+++ b/i18n/resources/zh/common.json
@@ -27,7 +27,8 @@
     },
     "hazard": {
       "none": "未检测到危害",
-      "slogan": "保持警惕，注意安全"
+      "slogan": "保持警惕，注意安全",
+      "alert": "风险提醒"
     },
     "contacts": {
       "title": "紧急联系",
@@ -41,7 +42,8 @@
     },
     "early": {
       "title": "预警",
-      "subtitle": "监测常见风险"
+      "subtitle": "通过官方来源的实时数据，及时了解新加坡常见灾害动态。这些更新能清晰呈现当前安全状况，帮助你采取行动，保护你和家人。",
+      "subtitle2": "监测常见风险"
     },
     "see_more": "查看更多",
     "prep": {
@@ -102,6 +104,55 @@
       "heat": {
         "danger": { "title": "高温（危险）" },
         "warning": { "title": "高温（警示）" }
+      }
+    }
+  },
+  "early": {
+    "severity": {
+      "safe": "安全",
+      "med": "中等",
+      "high": "高危"
+    },
+    "cards": {
+      "flood": {
+        "title": "突发洪水",
+        "desc": {
+          "safe": "未观测到显著降雨。沟渠与河道水位正常。",
+          "warning": "附近出现较强降雨，可能积水。避免低洼道路与路肩车道。",
+          "danger": "一带发生突发洪水。切勿涉水驾车；避免地下通道与地下空间。"
+        }
+      },
+      "haze": {
+        "title": "霾（PM2.5）",
+        "desc": {
+          "safe": "全岛空气质量处于正常范围。",
+          "warning": "PM2.5 升高。减少长时间户外活动；必要时佩戴口罩。",
+          "danger": "PM2.5 不健康。请留在室内并关闭门窗；使用空气净化器；外出佩戴 N95。"
+        }
+      },
+      "dengue": {
+        "title": "登革热病例群",
+        "desc": {
+          "safe": "你所在位置 5 公里内暂无活跃病例群。",
+          "warning": "附近约 {{km}} 公里有病例群。清除积水；使用防蚊剂。",
+          "danger": "附近为高风险病例群（{{cases}}+ 例）。避免清晨/黄昏被叮咬；每日家中自查；持续发热请就医。"
+        }
+      },
+      "wind": {
+        "title": "强风",
+        "desc": {
+          "safe": "风力轻至中等。",
+          "warning": "出现强风。收纳易被吹走物品；骑士与高车谨慎。",
+          "danger": "出现破坏性强风。请留在室内；避免沿海/开阔地。"
+        }
+      },
+      "heat": {
+        "title": "高温提示",
+        "desc": {
+          "safe": "热风险较低，注意补水。",
+          "warning": "炎热（体感约 {{hi}}°C）。减少剧烈活动；经常喝水。",
+          "danger": "极端炎热（体感约 {{hi}}°C）。可能中暑；待在阴凉/空调处；关怀弱势群体。"
+        }
       }
     }
   },
