--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -668,5 +668,12 @@
       "delete": "நீக்கு",
       "cancel": "ரத்து"
     }
+  },
+  "hazardDetail": {
+    "description": "விளக்கம்",
+    "affected_area": "பாதிக்கப்பட்ட பகுதி",
+    "safety_tips": "பாதுகாப்பு குறிப்புகள்",
+    "view_on_map": "வரைபடத்தில் காண்க",
+    "open_map": "வரைபடத்தைத் திறக்கவும்"
   }
 }
